添加实体书

--- a/index.ipynb
+++ b/index.ipynb
@@ -22,7 +22,11 @@
     "> 作者：李金<br>\n",
     "> 邮件：lijinwithyou@gmail.com<br>\n",
     "\n",
-    "`Github` 加载 `.ipynb` 的速度较慢，建议在 [Nbviewer](http://nbviewer.ipython.org/github/lijin-THU/notes-python/blob/master/index.ipynb) 中查看该项目。"
+    "`Github` 加载 `.ipynb` 的速度较慢，建议在 [Nbviewer](http://nbviewer.ipython.org/github/lijin-THU/notes-python/blob/master/index.ipynb) 中查看该项目。\n",
+    "\n",
+    "基于本笔记的实体书：《自学Python——编程基础、科学计算及数据分析》已经出版，京东、淘宝、当当、亚马逊均有销售。\n",
+    "\n",
+    "<img src=\"book.jpg\" width=\"40%\"/>"
    ]
   },
   {
@@ -268,11 +272,14 @@
    "source": [
     "觉得有用打赏一下？\n",
     "\n",
-    "![](payment.jpg)\n",
+    "<table><tr>\n",
+    "<td><img src=\"payment-small.jpg\" width=\"75%\" border=0></td>\n",
+    "<td><img src=\"payment-big.jpg\" width=\"75%\" border=0></td>\n",
+    "<td><img src=\"payment-any.jpg\" width=\"75%\" border=0></td>\n",
+    "</tr></table>\n",
     "\n",
-    "打两个广告：\n",
+    "打个广告：\n",
     "\n",
-    "- 基于本笔记整理补充而成的书籍即将出版，敬请期待！\n",
     "- 基于本笔记第一二节录制的视频：[Python小白入门课视频教学](http://www.softlinkonline.cn/zhibo.html?id=43)"
    ]
   }
