--- a/index.ipynb
+++ b/index.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "基于本笔记的实体书：《自学Python——编程基础、科学计算及数据分析》已经出版，京东、淘宝、当当、亚马逊均有销售。\n",
     "\n",
-    "<img src=\"book.jpg\" width=\"40%\"/>"
+    "![](book.jpg)"
    ]
   },
   {
@@ -272,11 +272,9 @@
    "source": [
     "觉得有用打赏一下？\n",
     "\n",
-    "<table><tr>\n",
-    "<td><img src=\"payment-small.jpg\" width=\"75%\" border=0></td>\n",
-    "<td><img src=\"payment-big.jpg\" width=\"75%\" border=0></td>\n",
-    "<td><img src=\"payment-any.jpg\" width=\"75%\" border=0></td>\n",
-    "</tr></table>\n",
+    "![](payment-small.jpg)\n",
+    "![](payment-big.jpg)\n",
+    "![](payment-any.jpg)\n",
     "\n",
     "打个广告：\n",
     "\n",
