--- a/index.ipynb
+++ b/index.ipynb
@@ -278,9 +278,7 @@
    "source": [
     "觉得有用打赏一下？\n",
     "\n",
-    "![](payment-small.jpg)\n",
-    "![](payment-big.jpg)\n",
-    "![](payment-any.jpg)\n",
+    "![](payment.jpeg)\n",
     "\n",
     "打个广告：\n",
     "\n",
