--- a/index.ipynb
+++ b/index.ipynb
@@ -4,20 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Analytics](https://ga-beacon.appspot.com/UA-80121379-2/notes-python)](https://github.com/lijin-thu/notes-python)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 中文 Python 笔记"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "[![Analytics](https://ga-beacon.appspot.com/UA-80121379-2/notes-python)](https://github.com/lijin-thu/notes-python)\n",
+    "\n",
+    "# 中文 Python 笔记\n",
+    "\n",
     "> 版本：0.0.1<br>\n",
     "> 作者：李金<br>\n",
     "> 邮件：lijinwithyou@gmail.com<br>\n",
@@ -28,20 +18,13 @@
     "\n",
     "`Github` 加载 `.ipynb` 的速度较慢，建议在 [Nbviewer](http://nbviewer.ipython.org/github/lijin-THU/notes-python/blob/master/index.ipynb) 中查看该项目。\n",
     "\n",
-    "基于本笔记的实体书：《自学Python——编程基础、科学计算及数据分析》已经出版，京东自营链接：\n",
+    "基于本笔记的实体书：《自学Python——编程基础、科学计算及数据分析》已经出版。\n",
     "\n",
+    "京东自营链接：\n",
     "https://item.jd.com/12328920.html\n",
-    "天猫：\n",
     "\n",
-    "https://detail.tmall.com/item.htm?id=566648749647\n",
+    "天猫、亚马逊、当当均有销售。\n",
     "\n",
-    "![](book.jpg)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "---\n",
     "\n",
     "## 简介\n",
@@ -54,20 +37,15 @@
     "\n",
     "推荐使用 [Anaconda](http://www.continuum.io/downloads)，这个IDE集成了大部分常用的包。\n",
     "\n",
-    "笔记内容使用 `ipython notebook` 来展示。\n",
+    "笔记内容使用 `jupyter notebook` 来展示。\n",
     "\n",
     "安装好 `Python` 和相应的包之后，可以在命令行下输入：\n",
     "\n",
     "```\n",
-    "$ ipython notebook\n",
+    "$ jupyter notebook\n",
     "```\n",
-    "来进入 `ipython notebook`。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "来进入 `jupyter notebook`。\n",
+    "\n",
     "----\n",
     "\n",
     "## 基本环境配置\n",
@@ -78,13 +56,8 @@
     "``` \n",
     "conda update conda\n",
     "conda update anaconda\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "```\n",
+    "\n",
     "---\n",
     "\n",
     "## 参考\n",
@@ -95,31 +68,16 @@
     "- [Deep Learning Tutorials](http://deeplearning.net/tutorial/)\n",
     "- [High Performance Scientific Computing](http://faculty.washington.edu/rjl/uwhpsc-coursera/index.html)\n",
     "- [Scipy Lectures](http://www.scipy-lectures.org/)\n",
-    "- [Pandas.org](http://pandas.pydata.org/pandas-docs/stable/index.html)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "- [Pandas.org](http://pandas.pydata.org/pandas-docs/stable/index.html)\n",
+    "\n",
     "----\n",
     "\n",
-    "## 目录"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 目录\n",
+    "\n",
     "可以在 Notebook 中打开 `generate static files.ipynb`，或者命令行中运行代码 `generate_static_files.py` 来生成静态的 HTML 文件。\n",
     "\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "---\n",
+    "\n",
     "- [01. **Python 工具**](01-python-tools)\n",
     "\t - [01.01 Python 简介](01-python-tools/01.01-python-overview.ipynb)\n",
     "\t - [01.02 Ipython 解释器](01-python-tools/01.02-ipython-interpreter.ipynb)\n",
@@ -274,19 +232,6 @@
     "\t - [12.02 一维数据结构：Series](12-pandas/12.02-series-in-pandas.ipynb)\n",
     "\t - [12.03 二维数据结构：DataFrame](12-pandas/12.03-dataframe-in-pandas.ipynb)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "觉得有用打赏一下？\n",
-    "\n",
-    "![](payment.jpeg)\n",
-    "\n",
-    "打个广告：\n",
-    "\n",
-    "- 基于本笔记第一二节录制的视频：[Python小白入门课视频教学](http://www.softlinkonline.cn/zhibo.html?id=43)"
-   ]
   }
  ],
  "metadata": {
@@ -305,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
