--- a/index.ipynb
+++ b/index.ipynb
@@ -230,7 +230,11 @@
     "- [12. **Pandas**](12-pandas)\n",
     "\t - [12.01 十分钟上手 Pandas](12-pandas/12.01-ten-minutes-to-pandas.ipynb)\n",
     "\t - [12.02 一维数据结构：Series](12-pandas/12.02-series-in-pandas.ipynb)\n",
-    "\t - [12.03 二维数据结构：DataFrame](12-pandas/12.03-dataframe-in-pandas.ipynb)"
+    "\t - [12.03 二维数据结构：DataFrame](12-pandas/12.03-dataframe-in-pandas.ipynb)\n",
+    "     \n",
+    "**打赏一下意思意思？**\n",
+    "\n",
+    "![](payment.jpeg)"
    ]
   }
  ],
