--- a/06-matplotlib/06.04-working-with-text---math-expression.ipynb
+++ b/06-matplotlib/06.04-working-with-text---math-expression.ipynb
@@ -208,7 +208,7 @@
     "`\\grave a`| $\\grave a$\n",
     "`\\hat a`| $\\hat a$\n",
     "`\\tilde a` | $\\tilde a$\n",
-    "`\\4vec a` | $\\vec a$\n",
+    "`\\vec a` | $\\vec a$\n",
     "`\\overline{abc}`|$\\overline{abc}$\n",
     "`\\widehat{xyz}`|$\\widehat{xyz}$\n",
     "`\\widetilde{xyz}`|$\\widetilde{xyz}$"
