--- a/06-matplotlib/06.09-do-not-trust-the-defaults.ipynb
+++ b/06-matplotlib/06.09-do-not-trust-the-defaults.ipynb
@@ -571,7 +571,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "我们可以使用 `anotate` 函数来注释特殊的点，假设我们要显示的点是 $2\\pi/3$："
+    "我们可以使用 `annotate` 函数来注释特殊的点，假设我们要显示的点是 $2\\pi/3$："
    ]
   },
   {
